chore: change attribute display

--- a/internal/web/templates/index.html
+++ b/internal/web/templates/index.html
@@ -159,7 +159,6 @@
                     <th class="px-2 py-2 text-left w-44">Timestamp</th>
                     <th class="px-2 py-2 text-left w-32">Container</th>
                     <th class="px-2 py-2 text-left w-16">Level</th>
-                    <th class="px-2 py-2 text-left w-56">Attributes</th>
                     <th class="px-2 py-2 text-left">Message</th>
                 </tr>
             </thead>
@@ -177,22 +176,21 @@
                         <td class="px-2 py-1 whitespace-nowrap align-top font-semibold"
                             :class="severityClass(entry.severity)"
                             x-text="severityLabel(entry.severity)"></td>
-                        <td class="px-2 py-1 align-top max-w-56">
+                        <td class="px-2 py-1 whitespace-pre-wrap break-all text-gray-200">
+                            <span x-text="entry.message"></span>
                             <template x-if="entry.attrs && Object.keys(entry.attrs).length > 0">
-                                <span class="text-xs flex flex-wrap gap-1">
+                                <span class="inline-flex flex-wrap gap-1 ml-2 text-xs align-middle">
                                     <template x-for="(val, key, idx) in entry.attrs" :key="key">
-                                        <span x-show="idx < 2" class="inline-flex bg-gray-700 rounded px-1.5 py-0.5">
+                                        <span x-show="idx < 3" class="inline-flex bg-gray-700 rounded px-1.5 py-0.5">
                                             <span class="text-gray-500" x-text="key + '='"></span>
                                             <span class="text-gray-300" x-text="truncateValue(val)"></span>
                                         </span>
                                     </template>
-                                    <span x-show="Object.keys(entry.attrs).length > 2"
-                                          class="text-gray-500 px-1">+<span x-text="Object.keys(entry.attrs).length - 2"></span></span>
+                                    <span x-show="Object.keys(entry.attrs).length > 3"
+                                          class="text-gray-500 px-1">+<span x-text="Object.keys(entry.attrs).length - 3"></span></span>
                                 </span>
                             </template>
                         </td>
-                        <td class="px-2 py-1 whitespace-pre-wrap break-all text-gray-200"
-                            x-text="entry.message"></td>
                     </tr>
                 </template>
             </tbody>
