--- a/internal/web/templates/index.html
+++ b/internal/web/templates/index.html
@@ -176,21 +176,7 @@
                         <td class="px-2 py-1 whitespace-nowrap align-top font-semibold"
                             :class="severityClass(entry.severity)"
                             x-text="severityLabel(entry.severity)"></td>
-                        <td class="px-2 py-1 whitespace-pre-wrap break-all text-gray-200">
-                            <span x-text="entry.message"></span>
-                            <template x-if="entry.attrs && Object.keys(entry.attrs).length > 0">
-                                <span class="inline-flex flex-wrap gap-1 ml-2 text-xs align-middle">
-                                    <template x-for="(val, key, idx) in entry.attrs" :key="key">
-                                        <span x-show="idx < 3" class="inline-flex bg-gray-700 rounded px-1.5 py-0.5">
-                                            <span class="text-gray-500" x-text="key + '='"></span>
-                                            <span class="text-gray-300" x-text="truncateValue(val)"></span>
-                                        </span>
-                                    </template>
-                                    <span x-show="Object.keys(entry.attrs).length > 3"
-                                          class="text-gray-500 px-1">+<span x-text="Object.keys(entry.attrs).length - 3"></span></span>
-                                </span>
-                            </template>
-                        </td>
+                        <td class="px-2 py-1 break-all text-gray-200"><span class="whitespace-pre-wrap" x-text="entry.message"></span><template x-if="entry.attrs && Object.keys(entry.attrs).length > 0"><span class="inline-flex flex-wrap gap-1 ml-2 text-xs align-middle"><template x-for="(pair, idx) in Object.entries(entry.attrs)" :key="pair[0]"><span x-show="idx < 3" class="inline-flex bg-gray-700 rounded px-1.5 py-0.5"><span class="text-gray-500" x-text="pair[0] + '='"></span><span class="text-gray-300" x-text="truncateValue(pair[1])"></span></span></template><span x-show="Object.keys(entry.attrs).length > 3" class="text-gray-500 px-1">+<span x-text="Object.keys(entry.attrs).length - 3"></span></span></span></template></td>
                     </tr>
                 </template>
             </tbody>
